# template-python-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.sh
.claude/: settings.json
.claude/agents/: README.md  cybersecurity_engineer.md  data_privacy_engineer.md  developer_experience.md  error_handling_engineer.md  orchestrator.md  performance_engineer.md  qa_test_engineer.md  software_architect.md  technical_writer.md
.claude/agents/runs/: .gitkeep
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: deploy.yml  smoke-test.yml  test.yml
config/: logging.yaml  settings.yaml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  SECURITY.md
docs/working_docs/: .gitkeep  README.md
migrations/: .gitkeep  README.md
scripts/: .gitkeep  generate_api_keys.py  rotate_api_keys.py  run_migrations.sh
src/: __init__.py  py.typed
src/adapters/: .gitkeep  __init__.py
src/api/: __init__.py  main.py
src/api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
src/api/routes/: __init__.py  health.py
src/api/schemas/: __init__.py  health.py
src/core/: __init__.py  config.py  constants.py  exceptions.py
src/models/: .gitkeep  __init__.py
src/services/: .gitkeep  __init__.py
src/storage/: __init__.py  database.py  redis_client.py
src/utils/: .gitkeep  __init__.py
tests/: __init__.py  conftest.py
tests/integration/: .gitkeep  __init__.py
tests/smoke/: .gitkeep  __init__.py  conftest.py
tests/unit/: __init__.py  test_health.py
